--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
             <div class="card-content">
                 <span class="card-title activator grey-text text-darken-4">Quran<i
                         class="material-icons right">more_vert</i></span>
+                        <span>$5/lesson</span>
                 <p><a href="#">Take me there!</a></p>
             </div>
             <div class="card-reveal">
@@ -102,6 +103,7 @@
             <div class="card-content">
                 <span class="card-title activator grey-text text-darken-4">Islamic Studies<i
                         class="material-icons right">more_vert</i></span>
+                        <span>$5/lesson</span>
                 <p><a href="#">Take me there!</a></p>
             </div>
             <div class="card-reveal">
@@ -117,6 +119,7 @@
             <div class="card-content">
                 <span class="card-title activator grey-text text-darken-4">Arabic Reading and Writing<i
                         class="material-icons right">more_vert</i></span>
+                        <span>$5/lesson</span>
                 <p><a href="#">Take me there!</a></p>
             </div>
             <div class="card-reveal">
@@ -131,7 +134,7 @@
 
     <div id="form1">
         
-            <form class="col s12" method="POST" action="back-end.php" name="contactStudent">
+            <form class="col s12" method="POST" action="https://formsubmit.co/alicemakawa.dev@gmail.com" name="contactStudent">
                 <h3 id= "formHeader"style ="text-align: center;">Interested? Get In Touch </h3>
               <div class="row">
                 <div class="input-field col s6">
@@ -191,7 +194,7 @@
               </div>
               <div class="row">
                   <div id="submitButton">
-                    <button class="btn waves-effect waves-light btn-large" type="submit" name="submit">Submit
+                    <button class="btn waves-effect waves-light btn-large" type="submit" name="submit" id="btnSubmit">Submit
                         <i class="material-icons right">send</i>
                       </button>
                     
@@ -210,12 +213,12 @@
 <footer class="page-footer">
     <div class="container">
       <div class="row">
-        <div class="col l4 s12">
+        <div class="col l3 s12">
             <a href="#" class="brand-logo center"><img style="display:flex; justify-content: center;"src="images/LOgo transparent bg.png" width="60" height="60"><span id="learn"></span></p> </a>
           <h5 class="white-text">Learn Islam For kids</h5>
           <p class="grey-text text-lighten-4">The home of authentic education for kids.</p>
         </div>
-        <div class="col l4  s12">
+        <div class="col l3  s12">
           <h5 class="white-text">Browse</h5>
           <ul>
             <li><a class="grey-text text-lighten-3" href="#!"><Quran></a></li>
@@ -224,19 +227,34 @@
             <li><a class="grey-text text-lighten-3" href="#!">About Us</a></li>
           </ul>
         </div>
-        <div class="col l4  s12">
+        <div class="col l3  s12">
             <h5 class="white-text">Connect</h5>
             <ul>
-              <li><a class="grey-text text-lighten-3" href="#!"><i class="material-icons">facebook</i></a></li>
-              <li><a class="grey-text text-lighten-3" href="#!"><i class="material-icons">whatsapp</i></a></li>
+              <li><a class="grey-text text-lighten-3" href="https://wa.me/27733942023"><i class="material-icons">whatsapp</i></a></li>
             </ul>
+          </div>
+          <div class="col l3  s12">
+            <h5 class="white-text">Bank Details</h5>
+            <p>Bank name:
+              First Century Bank<br>
+              Bank address:
+              1731 N Elm St  Commerce, GA 30529 USA<br>
+              Routing (ABA):
+              061120084<br>
+              Account number:
+              4024507309585<br>
+              Account type:
+              CHECKING<br>
+              Beneficiary name:
+              Alice Makawa
+              </p>
           </div>
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
       © 2022 Learn Islam For Kids
-      <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+      <a class="grey-text text-lighten-4 right" href="#!"></a>
       </div>
     </div>
   </footer>
